slow voip/sip call flow for large captures
This issue was migrated from bug 6794 in our old bug tracker.
Original bug information:
Reporter: Cristian Constantin
Status: RESOLVED FIXED
Product: Wireshark
Component: GTK+ UI
OS: All
Platform: All
Version: Git
Attachments:
voip_calls.c_patch: patch for voip_calls.c
voip_calls.h_patch: patch for voip_calls.h
voip_calls_dlg.c_patch: patch for voip_calls_dlg.c
graph_analysis.h_patch: patch for graph_analysis.h