From Cristian Constantin: slow voip/sip call flow for large captures.

https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=6794

svn path=/trunk/; revision=40878